# torrent-rs

./: .gitignore  .rust_analyzer.toml  AGENTS.md  Cargo.toml  DISK_IO.md  Justfile  LICENSE  LIFECYCLE.md  METRICS_PORTING_NOTES.md  Makefile  PLAN.md  PR_DESCRIPTION.md  README.md  SESSION.md  rust-toolchain.toml  session-test.md
.github/workflows/: rust.yaml
bencode/: Cargo.toml
bencode/examples/: decode_dht.rs
bencode/src/: bencode.rs  lib.rs
bittorent-core/: Cargo.toml
bittorent-core/src/torrent/peer/: mod.rs
bittorent_core/: Cargo.toml  todo.md
bittorent_core/src/: client.rs  error.rs  lib.rs  main.rs  types.rs
bittorent_core/src/torrent/: bencode.rs  metainfo.rs  mod.rs
bittorent_core/src/torrent/peer/: extension.rs  mod.rs  peer_protocol.rs
bittorent_core/src/tracker/: error.rs  http.rs  mod.rs  udp.rs
bittorrent-cli/: Cargo.toml  README.md
bittorrent-cli/src/: main.rs
bittorrent-common/: Cargo.toml
bittorrent-common/src/: lib.rs  metainfo.rs  types.rs
bittorrent-core/: ARCHITECTURE.md  Cargo.toml  PLAN.md  PLAN_SIMULATION_TESTING.md  TODO.md  \  todo.md
bittorrent-core/benches/: storage_contention.rs
bittorrent-core/examples/: archlinux.rs  cachy-os.rs  download_with_progress.rs
bittorrent-core/src/: .rustc_info.json  bitfield.rs  choker.rs  client.rs  detail.rs  ema.rs  lib.rs  main.rs  metadata.rs  metainfo.rs  net.rs  piece_picker.rs  port_mapping.rs  session.rs  session_config.rs  torrent.rs  torrent_refactor.rs  types.rs  util.rs  utils.rs  verify_torrent_file.rs
bittorrent-core/src/events/: mod.rs  peer.rs  session.rs  torrent.rs
bittorrent-core/src/metrics/: counters.rs  mod.rs  progress.rs
bittorrent-core/src/peer/: choker.rs  connection.rs  error.rs  manager.rs  metrics.rs  mod.rs  peer_connection.rs  peer_connection.rs.backup  peer_connection_refactor.rs  piece_picker.rs  retry_queue.rs
bittorrent-core/src/protocol/: extension.rs  mod.rs  peer_wire.rs
bittorrent-core/src/storage/: mod.rs  storage_manager.rs
bittorrent-core/src/trackers/: http.rs  mod.rs  udp.rs
bittorrent-core/tests/: OPTIMISTIC_UNCHOKE_SIM.md  PLAN.md  SIMULATION_TESTING_SCENARIOS.md  mod.rs  simulator.rs
bittorrent-core/tests/mock/: mod.rs  peer.rs  storage.rs
bittorrent-daemon/: Cargo.toml  README.md
bittorrent-daemon/src/: main.rs
bittorrent-remote/: Cargo.toml
bittorrent-remote/src/: main.rs
bittorrent-tui/: Cargo.toml
bittorrent-tui/src/: app.rs  event.rs  main.rs  torrent.rs  tui.rs
bittorrent-tui/src/ui/: mod.rs  status_bar.rs  torrent_detail.rs  torrent_list.rs
cmd/: Cargo.toml
cmd/src/: cli.rs  lib.rs  main.rs  metrics.rs
dht/: Cargo.toml  SESSION.md  gemini-review.md  todo.md
dht/src/: dht.rs  error.rs  iterative_lookup.rs  lib.rs  main.rs  message.rs  node_id.rs  peer_store.rs  routing_table.rs  token.rs
docker/: Dockerfile.bittorrent-cli  Dockerfile.seeder  Dockerfile.tracker  docker-compose.e2e.yaml
docker/scripts/: start_transmission_seeding.sh
docker/seeder_data/: test.torrent
magnet-uri/: Cargo.toml
magnet-uri/examples/: build_magnet.rs  parse_magnet.rs
magnet-uri/src/: lib.rs
mainline-dht/: CONCURRENCY_PLAN.md  Cargo.toml  DHT_DESIGN.md  NODE_ID_PERSISTENCE_PLAN.md
mainline-dht/src/: dht.rs  dht_config.rs  error.rs  krpc_socket.rs  lib.rs  main.rs  message.rs  node.rs  node_id.rs  peer_store.rs  routing_table.rs  search.rs  token.rs  transaction.rs
mainline-dht/src/metrics/: mod.rs
metrics/: bittorrent-dashboard.json  dashboard-import.json  docker-compose.yaml  docker-compose.yml  prometheus.yml
metrics/grafana/dashboards/: torrent-rs-dashboard.json
metrics/grafana/provisioning/dashboards/: default.yml
mytorrent/: README.md  test.torrent  todo.md
peer/: Cargo.toml  doc.md
peer-protocol/: Cargo.toml
peer-protocol/src/: lib.rs
peer-protocol/src/peer/: extension.rs  mod.rs  protocol.rs
peer/src/: connection.rs  error.rs  lib.rs  manager.rs
research/: DESIGN_REVIEW.md  HASH_POOL.md  PEER_TCP.md  PLAN.md
sample_torrents/: Funes el memorioso.pdf.torrent  OBS-Studio-31.1.2-Windows-x64-Installer.exe.torrent  dire-strait.torrent  kali-linux-2026.1-installer-amd64.iso.torrent  linuxmint-21.2-mate-64bit.iso.torrent
sample_torrents/torrentdyne_more_hare/: torrentdyne_more_hare_http_ipv4.probe.torrent  torrentdyne_more_hare_http_ipv6.probe.torrent
tests/: Cargo.toml  PLAN.md  README.md  bencode_tests.rs  bitfield_tests.rs  dht_tests.rs  end_to_end_tests.rs  magnet_tests.rs  peer_tests.rs  session_tests.rs  storage_tests.rs  torrent_tests.rs  tracker_tests.rs
tests/common/: fixtures.rs  helpers.rs  mocks.rs  mod.rs  sandbox.rs
tracker-client/: Cargo.toml
tracker-client/src/: client.rs  error.rs  http.rs  lib.rs  types.rs  udp.rs
tracker-client/src/tracker/: http.rs  mod.rs  udp.rs
tracker-client/tests/: http_integration.rs  udp_integration.rs
tui/: Cargo.toml  VIEW_GUIDE.md  ui.md
tui/src/: app.rs  command.rs  main.rs
