[workspace]
members = [
  "bencode",
  "bittorrent-common",
  "bittorrent-core",
  "cmd",
  "magnet-uri",
  "mainline-dht",
  "peer-protocol",
  "tracker-client",
]

resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[workspace.package]
license = "MIT"
edition = "2024"
repository = "https://github.com/LucasUTNFRD/torrent-rs"

[workspace.dependencies]
sha1 = "0.10"
thiserror = "2.0"
directories = "6.0"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.5.0"
rand = "0.10.0"
metrics = "0.24.3"


[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
