[package]
name = "bittorent_core"
version = "0.1.0"
edition = "2024"

[dependencies]
sha1.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"                              # or another bencode serde implementation
serde_bytes = "0.11"
hex = "0.4.3"
