[package]
name = "bittorrent-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bittorrent-core = { path = "../bittorrent-core/" }
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console-subscriber.workspace = true
