[package]
name = "bittorrent-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bittorrent-common = { path = "../bittorrent-common/" }
bittorrent-core = { path = "../bittorrent-core/" }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
