[package]
name = "bittorrent-core"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bittorrent-common = { path = "../bittorrent-common/" }
async-trait = "0.1"
thiserror.workspace = true
rand = "0.9.1"
reqwest = "0.12.22"
url = "2.5.4"
urlencoding = "2.1.3"
bencode = { path = "../bencode" }
storage = { path = "../storage/" }
tracker-client = { path = "../tracker-client/" }
peer = { path = "../peer/" }
