[package]
name = "bittorrent-core"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bittorrent-common = { path = "../bittorrent-common/" }
async-trait = "0.1"
thiserror.workspace = true
rand.workspace = true
reqwest = "0.12.22"
url = "2.5.4"
urlencoding = "2.1.3"
bencode = { path = "../bencode" }
tracker-client = { path = "../tracker-client/" }
sha1 = "0.10"
bytes = "1.10.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
peer-protocol = { path = "../peer-protocol/" }
futures = "0.3.31"
console-subscriber.workspace = true
once_cell = "1.21.3"
magnet-uri = { path = "../magnet-uri/" }
mainline-dht = { path = "../mainline-dht/" }

[lints.clippy]
pedantic = "deny"
nursery = "deny"
# [lints.clippy]
# unwrap_used = "deny"
# allow-unwrap-in-tests = "allow"
