[package]
name = "bittorrent-core"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bittorrent-common = { path = "../bittorrent-common/" }
async-trait = "0.1"
thiserror.workspace = true
rand.workspace = true
url = "2.5.4"
urlencoding = "2.1.3"
bencode = { path = "../bencode" }
sha1 = "0.10"
bytes = "1.10.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures = "0.3.31"
console-subscriber.workspace = true
once_cell = "1.21.3"
magnet-uri = { path = "../magnet-uri/" }
mainline-dht = { path = "../mainline-dht/" }
directories.workspace = true
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
metrics.workspace = true
igd-next = { version = "0.17.0", features = ["aio_tokio"] }
netdev = "0.35"
reqwest = { version = "0.13", features = ["gzip"], default-features = false }

[dev-dependencies]
async-trait = "0.1"
bittorrent-common = { path = "../bittorrent-common/" }
criterion = { version = "0.8", features = ["async_tokio"] }
futures = "0.3.31"
sha1 = "0.10"
bytes = "1.10.1"
tempfile = "3"
tokio-util = { version = "0.7.15", features = ["codec"] }
