[package]
name = "bittorrent-tui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
itertools = "0.14"

# Local dependencies
bittorrent-common = { path = "../bittorrent-common" }
bittorrent-core = { path = "../bittorrent-core" }
