[package]
name = "cmd"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
metrics = { workspace = true }
metrics-exporter-prometheus = "0.18.1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bittorrent-core = { path = "../bittorrent-core/" }
console-subscriber.workspace = true

[lints]
workspace = true
