[package]
name = "dht"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.11.1"
futures = "0.3.32"
hex = "0.4.3"
socket2 = "0.6.3"
thiserror.workspace = true
tokio.workspace=  true
tracing.workspace = true
tracing-subscriber.workspace =true
bencode = { path = "../bencode" }
bittorrent-common = { path = "../bittorrent-common/" }
anyhow.workspace = true
rand.workspace = true
sha1_smol = "1.0.1"

[lints]
workspace = true
