[package]
name = "mainline-dht"
version = "0.1.0"
edition = "2024"
description = "Simple BitTorrent's Mainline DHT implementation "

[dependencies]
bencode = { path = "../bencode" }
crc = "3.4.0"
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
bittorrent-common = { path = "../bittorrent-common/" }
thiserror.workspace = true
lru = "0.16.2"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive"] }
