[package]
name = "peer-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
sha1.workspace = true
thiserror.workspace = true
hex = "0.4.3"
bytes = "1.10.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures = "0.3.31"
tracing.workspace = true
tokio.workspace = true
bencode = { path = "../bencode" }
bittorrent-common = { path = "../bittorrent-common/" }
