[package]
name = "peer"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
tokio.workspace = true
bytes = "1.10.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
peer-protocol = { path = "../peer-protocol/" }
bittorrent-core = { path = "../bittorrent-core/" }
tracker-client = { path = "../tracker-client/" }
futures = "0.3.31"
