[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[[test]]
name = "bencode_tests"
path = "bencode_tests.rs"

[[test]]
name = "bitfield_tests"
path = "bitfield_tests.rs"

[[test]]
name = "dht_tests"
path = "dht_tests.rs"

[[test]]
name = "tracker_tests"
path = "tracker_tests.rs"

[[test]]
name = "session_tests"
path = "session_tests.rs"

[[test]]
name = "torrent_tests"
path = "torrent_tests.rs"

[[test]]
name = "magnet_tests"
path = "magnet_tests.rs"

[[test]]
name = "peer_tests"
path = "peer_tests.rs"

[[test]]
name = "storage_tests"
path = "storage_tests.rs"

[[test]]
name = "end_to_end_tests"
path = "end_to_end_tests.rs"

[dependencies]
bencode = { path = "../bencode" }
bittorrent-common = { path = "../bittorrent-common" }
bittorrent-core = { path = "../bittorrent-core" }
mainline-dht = { path = "../mainline-dht" }
tracker-client = { path = "../tracker-client" }

# Test utilities
tokio.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
wiremock.workspace = true
mockall.workspace = true
serial_test.workspace = true

# Other dependencies
bytes = "1.10.1"
tracing.workspace = true
