[package]
name = "tracker-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bittorrent-common = { path = "../bittorrent-common/" }
async-trait = "0.1"
thiserror.workspace = true
bytes = "1.10.1"
futures = "0.3.31"
tracing.workspace = true
tokio.workspace = true
rand = "0.9.1"
reqwest = "0.12.22"
url = "2.5.4"
urlencoding = "2.1.3"
bencode = { path = "../bencode" }
tokio-stream = "0.1.17"


[features]
real_trackers = []

[dev-dependencies]
wiremock = "0.6"
